[gd_scene load_steps=118 format=3 uid="uid://cu0dol3wgdf3j"]

[ext_resource type="Script" path="res://scripts/PlayerScripts/player.gd" id="1_pre7a"]
[ext_resource type="Shader" uid="uid://bgafj0yghf2qm" path="res://assets/Sprites/Extra/hitFlash.tres" id="2_lcyww"]
[ext_resource type="Texture2D" uid="uid://s1q82lpqeuvt" path="res://assets/Sprites/Mage/Mage-Sheet.png" id="2_tfu6d"]
[ext_resource type="Script" path="res://scripts/PlayerScripts/idleState.gd" id="3_482w4"]
[ext_resource type="Script" path="res://scripts/Components/StatsComponent.gd" id="3_bl73c"]
[ext_resource type="Script" path="res://scripts/StateMachine/StateMachine.gd" id="3_xi27y"]
[ext_resource type="Script" path="res://scripts/PlayerScripts/walkState.gd" id="4_3j0c4"]
[ext_resource type="Script" path="res://scripts/PlayerScripts/AttackState.gd" id="7_fhcsb"]
[ext_resource type="PackedScene" uid="uid://dm13bkfdseof0" path="res://scenes/Components/HurtboxComponent.tscn" id="8_pahnu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ssbt"]
shader = ExtResource("2_lcyww")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg218"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 100, 32, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_b23br"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 100, 32, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3doi"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 100, 32, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vec0"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 100, 32, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ev2e"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 100, 32, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd1i4"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 100, 32, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbgpp"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3gxg"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wnjk"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y622a"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e631o"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0cnu"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8poo"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_si67q"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bapjm"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pphv7"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0men1"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkk8t"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlj3u"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 720, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4aby"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 720, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujdht"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 720, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bkj4"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 720, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkfl8"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 720, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkodv"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 720, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuv8p"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fleja"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_re6d6"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qnr2"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y4v7"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbj4s"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvvpr"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 864, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpfji"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 864, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbrti"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 864, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q16xg"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 864, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbrns"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 864, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv2fw"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 864, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqsn"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 576, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x4jm"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 576, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_15tg4"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 576, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nudg"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 576, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyycr"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 576, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw0ac"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 576, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mgce"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 432, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq77s"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 432, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi75g"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 432, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye8xs"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 432, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_shxhc"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 432, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g65v8"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 432, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjg2y"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 1008, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnq1u"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 1008, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_16nkk"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 1008, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rypys"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 1008, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmsup"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 1008, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow7yu"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 1008, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv6j8"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxwfj"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o724"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_crna3"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb2p0"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_chlll"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfped"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y3fi"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpe7n"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8ucy"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5vct"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm2nv"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0l42"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 768, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7w05"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 768, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jykw"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 768, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2awn"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 768, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qry5l"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 768, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcdny"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 768, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4lm8"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_km530"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8xfh"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2hgf"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjq56"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1wgm"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwgpj"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 912, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o54a1"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 912, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_006g7"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 912, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0qaq"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 912, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0nr8"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 912, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xomf"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 912, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2rdh"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 624, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub60r"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 624, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sina1"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 624, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ijht"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 624, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehiij"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 624, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_53k03"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 624, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uhym"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 480, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdwgr"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 480, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmwln"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 480, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2ido"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 480, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mryu"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 480, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqodl"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 480, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ylw2"]
atlas = ExtResource("2_tfu6d")
region = Rect2(0, 1056, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkctq"]
atlas = ExtResource("2_tfu6d")
region = Rect2(32, 1056, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0lrs"]
atlas = ExtResource("2_tfu6d")
region = Rect2(64, 1056, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd40n"]
atlas = ExtResource("2_tfu6d")
region = Rect2(96, 1056, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoeh7"]
atlas = ExtResource("2_tfu6d")
region = Rect2(128, 1056, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jeyy"]
atlas = ExtResource("2_tfu6d")
region = Rect2(160, 1056, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_it26m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg218")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b23br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3doi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vec0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ev2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd1i4")
}],
"loop": false,
"name": &"attackDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbgpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3gxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wnjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y622a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e631o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0cnu")
}],
"loop": true,
"name": &"idleDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8poo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si67q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bapjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pphv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0men1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkk8t")
}],
"loop": true,
"name": &"idleDownLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlj3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4aby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujdht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bkj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkfl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkodv")
}],
"loop": true,
"name": &"idleDownRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuv8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fleja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re6d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qnr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y4v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbj4s")
}],
"loop": true,
"name": &"idleLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvvpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpfji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbrti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q16xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbrns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv2fw")
}],
"loop": true,
"name": &"idleRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x4jm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15tg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nudg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyycr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw0ac")
}],
"loop": true,
"name": &"idleUp",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mgce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq77s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi75g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye8xs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shxhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g65v8")
}],
"loop": true,
"name": &"idleUpLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjg2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnq1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16nkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rypys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmsup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow7yu")
}],
"loop": true,
"name": &"idleUpRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv6j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxwfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o724")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crna3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb2p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chlll")
}],
"loop": true,
"name": &"walkDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfped")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y3fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpe7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8ucy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5vct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm2nv")
}],
"loop": true,
"name": &"walkDownLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0l42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7w05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jykw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2awn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qry5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcdny")
}],
"loop": true,
"name": &"walkDownRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4lm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km530")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8xfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2hgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjq56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1wgm")
}],
"loop": true,
"name": &"walkLeft",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwgpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o54a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_006g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0qaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0nr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xomf")
}],
"loop": true,
"name": &"walkRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2rdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub60r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sina1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ijht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehiij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53k03")
}],
"loop": true,
"name": &"walkUp",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uhym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdwgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmwln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2ido")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mryu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqodl")
}],
"loop": true,
"name": &"walkUpLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ylw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkctq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0lrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd40n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoeh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jeyy")
}],
"loop": true,
"name": &"walkUpRight",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_eq8jw"]
resource_name = "hitFlash"
length = 0.2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wfd6p"]
_data = {
"hitFlash": SubResource("Animation_eq8jw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0nv6"]
size = Vector2(11, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6103c"]
size = Vector2(13, 30)

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -22)
motion_mode = 1
script = ExtResource("1_pre7a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_0ssbt")
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_it26m")
animation = &"attackDown"

[node name="HitFlash" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wfd6p")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 10)
shape = SubResource("RectangleShape2D_h0nv6")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("3_bl73c")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_xi27y")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_482w4")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("4_3j0c4")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("stats")]
script = ExtResource("7_fhcsb")
stats = NodePath("../../StatsComponent")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="HurtboxComponent" parent="." instance=ExtResource("8_pahnu")]
collision_layer = 0
collision_mask = 2

[node name="Hurtbox" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_6103c")
debug_color = Color(0.772549, 0, 0, 0.419608)

[node name="DamageNumberOrigin" type="Node2D" parent="."]
position = Vector2(0, -23)

[connection signal="damagedRecieved" from="HurtboxComponent" to="." method="_on_hurtbox_component_damaged_recieved"]
